<resources>
    <string name="app_name">Multi Movie Catalog</string>
    <string name="busca">Busca</string>
    <string name="filmes_populares">Filmes Populares</string>
    <string name="melhores_avaliados">Melhores Avaliados</string>
    <string name="terror_e_suspense">Terror e Suspense</string>
    <string name="acao_e_aventura">Ação e Aventura</string>
    <string name="sci_fi">Ficção Científica</string>
    <string name="rent_string">Rent now in 4k for $9,99</string>
    <string name="buy_string">Buy now in 4k for $19,99</string>
    <string name="overview">Overview</string>
    <string name="results_string">Resultados para</string>
</resources>